--- a/login-page.html
+++ b/login-page.html
@@ -44,12 +44,14 @@
         <p class="fn-paragraph-no-margin">Welcome Back!</p>
       </div>
       <div id="w-node-_1696818f-6972-b96d-9115-8d01979d54d5-b0857c68" class="fn-form w-form">
-        <form id="wf-form-Form-Standard" name="wf-form-Form-Standard" data-name="Form Standard" method="get" class="fn-form-standard" data-wf-page-id="6726bc7e1fce55e1b0857c68" data-wf-element-id="1696818f-6972-b96d-9115-8d01979d54d6"><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Email-3" data-name="Email 3" placeholder="Email" type="email" id="Email-3" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Password" data-name="Password" placeholder="Password" type="password" id="Password" required="">
-          <div class="fn-form-wrapper">
-            <a href="#" class="button w-button">Submit</a>
-            <a href="sign-up.html" class="button w-button">Sign Up</a>
-          </div>
-        </form>
+        <form id="login-form">
+            <input class="fn-field w-input" autocomplete="off" maxlength="256" name="email" placeholder="Email" type="email" id="Email-3" required>
+            <input class="fn-field w-input" autocomplete="off" maxlength="256" name="password" placeholder="Password" type="password" id="Password" required>
+            <div class="fn-form-wrapper">
+              <button type="submit" class="button w-button">Login</button>
+              <a href="sign-up.html" class="button w-button">Sign Up</a>
+            </div>
+          </form>          
         <div class="fn-success-message w-form-done">
           <div class="fn-success-message-wrapper">
             <div>Your information is submitted succesfully!</div>
@@ -82,5 +84,38 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    document.getElementById('login-form').addEventListener('submit', async function(event) {
+      event.preventDefault(); // Prevent default form submission behavior
+  
+      // Get the email and password entered by the user
+      const email = document.getElementById('Email-3').value;
+      const password = document.getElementById('Password').value;
+      
+
+      const loginData = { email, password };
+  
+      try {
+        const response = await fetch('/api/user/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(loginData),
+          credentials: 'include'
+        });
+  
+        const data = await response.json();
+        if (response.ok) {
+        // Redirect to another page, no need to handle token if cookies are used
+        window.location.href = 'profile.html'; // Redirect after successful login
+      } else {
+        console.error('Login failed:', data.message);
+        alert(data.message || 'Login failed. Please try again.');
+      }
+    } catch (error) {
+      console.error('Error:', error);
+      alert('An error occurred. Please try again later.');
+    }
+    });
+  </script>  
 </body>
 </html>
