--- a/profile.html
+++ b/profile.html
@@ -24,6 +24,7 @@
       <div class="text-block">LendIt.</div>
     </div>
   </section>
+  
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-3 w-nav">
     <div class="container-4 w-container">
       <nav role="navigation" class="nav-menu w-nav-menu">
@@ -37,32 +38,27 @@
       </div>
     </div>
   </div>
+
   <div class="fn-section">
     <div class="fn-container-grid">
       <div id="w-node-_1696818f-6972-b96d-9115-8d01979d54cc-f1e1622c" class="fn-column-center">
-        <h2 class="fn-heading-2">John Doe</h2>
-        <p class="fn-paragraph-no-margin">Arlington, Virginia</p>
+        <h2 class="fn-heading-2" id="user-name">John Doe</h2>
+        <p class="fn-paragraph-no-margin" id="user-location">Arlington, Virginia</p>
       </div>
     </div>
+
     <div class="w-layout-blockcontainer container-6 w-container">
       <h1 class="heading">Item(s) on sale:</h1>
       <div id="w-node-_9c018cdf-731a-eab6-4815-fef7f39873ae-f1e1622c" class="efi-ft-01-cell">
         <div class="efi-ft-01-image-wrapper"><img src="images/zfwyrIA6bFw.jpg" loading="lazy" width="6048" height="3400" alt="Lawnmower" srcset="images/zfwyrIA6bFw-p-500.jpg 500w, images/zfwyrIA6bFw.jpg 600w" sizes="(max-width: 767px) 100vw, 608px" class="image-2 unsplash-image"></div>
         <div class="efi-ft-01-feature-wrapper">
-          <h4 class="efi-h4-2">Lawn Mower</h4>
-          <p class="efi-paragraph">Age: 6 Months<br>Owner: Brandon Miles<br>Location: Alexandria, VA<br>Description: <br>Price: $20 / day</p>
-        </div>
-      </div>
+      <div id="items-on-sale"></div>
+
       <h1 class="heading">Item(s) Sold:</h1>
-      <div id="w-node-_1ed47379-1f03-e218-3589-f5cbce64c92c-f1e1622c" class="efi-ft-01-cell">
-        <div class="efi-ft-01-image-wrapper"><img class="image-2 unsplash-image unsplash-image" src="images/1-nx1QR5dTE.jpg" width="3558" height="3558" alt="Sunglasses from Gentle Monster" style="color:#f3f3f3;background-color:#f3f3f3" sizes="(max-width: 767px) 100vw, 608px" loading="lazy" srcset="images/1-nx1QR5dTE.jpg 500w, images/1-nx1QR5dTE.jpg 600w"></div>
-        <div class="efi-ft-01-feature-wrapper">
-          <h4 class="efi-h4-2">Glasses</h4>
-          <p class="efi-paragraph">Age: 6 Months<br>Owner: Brandon Miles<br>Location: Alexandria, VA<br>Description: <br>Price: $20 / day</p>
-        </div>
-      </div>
+      <div id="items-sold"></div>
     </div>
   </div>
+
   <div class="efi-ftr-05">
     <div class="efi-ftr-05-container">
       <div class="efi-ftr-05-footer-horizontal">
@@ -82,7 +78,67 @@
       </div>
     </div>
   </div>
+
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+
+  <script>
+    async function fetchUserProfile() {
+      try {
+        const response = await fetch('/api/profile', {
+          method: 'GET',
+          credentials: 'include',  // Ensure cookies are sent
+        });
+  
+        const data = await response.json();
+  
+        if (data.user) {
+          // Update user profile on the page
+          document.getElementById('user-name').textContent = `${data.user.name}`;
+        }
+  
+        // Display user's items
+        displayUserItems(data.items);
+  
+      } catch (error) {
+        console.error('Error fetching user profile:', error);
+      }
+    }
+  
+    function displayUserItems(items) {
+      const onSaleContainer = document.getElementById('items-on-sale');
+      const soldContainer = document.getElementById('items-sold');
+  
+      items.forEach(item => {
+        const itemElement = document.createElement('div');
+        itemElement.classList.add('efi-ft-01-cell');
+        itemElement.innerHTML = `
+          <div class="efi-ft-01-image-wrapper">
+            <img src="${item.image || 'default-image.jpg'}" loading="lazy" width="6048" height="3400" alt="${item.name}" class="image-2">
+          </div>
+          <div class="efi-ft-01-feature-wrapper">
+            <h4 class="efi-h4-2">${item.name}</h4>
+            <p class="efi-paragraph">
+              Age: ${item.age} Months<br>
+              Owner: ${item.owner}<br>
+              Location: ${item.location}<br>
+              Description: ${item.description}<br>
+              Price: $${item.price} / ${item.pricePer}
+            </p>
+          </div>
+        `;
+  
+        // Add to either on-sale or sold sections
+        if (item.status === 'sold') {
+          soldContainer.appendChild(itemElement);
+        } else {
+          onSaleContainer.appendChild(itemElement);
+        }
+      });
+    }
+  
+    fetchUserProfile();
+  </script>
+  
 </body>
 </html>
