--- a/sign-up.html
+++ b/sign-up.html
@@ -44,18 +44,22 @@
         <p class="fn-paragraph-no-margin">First step towards greater savings and an awesome community.</p>
       </div>
       <div id="w-node-_1696818f-6972-b96d-9115-8d01979d54d5-c4009ed5" class="fn-form w-form">
-        <form id="wf-form-Form-Standard" name="wf-form-Form-Standard" data-name="Form Standard" method="get" class="fn-form-standard" data-wf-page-id="67278b73b98345c0c4009ed5" data-wf-element-id="1696818f-6972-b96d-9115-8d01979d54d6"><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Name" data-name="Name" placeholder="Name" type="text" id="Name" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Email-3" data-name="Email 3" placeholder="Email" type="email" id="Email-3" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Password" data-name="Password" placeholder="New Password" type="password" id="Password" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Password-2" data-name="Password 2" placeholder="Confirm Password" type="password" id="Password-2" required="">
+        <form id="signUpForm" class="fn-form-standard">
+          <input class="fn-field w-input" autocomplete="off" maxlength="256" name="name" placeholder="Name" type="text" id="Name" required="">
+          <input class="fn-field w-input" autocomplete="off" maxlength="256" name="email" placeholder="Email" type="email" id="Email" required="">
+          <input class="fn-field w-input" autocomplete="off" maxlength="256" name="password" placeholder="New Password" type="password" id="Password" required="">
+          <input class="fn-field w-input" autocomplete="off" maxlength="256" name="confirmPassword" placeholder="Confirm Password" type="password" id="ConfirmPassword" required="">
           <div class="fn-form-wrapper">
-            <a href="#" class="button w-button">Submit</a>
+            <button type="submit" class="button w-button">Submit</button>
             <a href="login-page.html" class="button w-button">Log In</a>
           </div>
         </form>
-        <div class="fn-success-message w-form-done">
+        <div id="successMessage" class="fn-success-message w-form-done" style="display:none;">
           <div class="fn-success-message-wrapper">
-            <div>Your information is submitted succesfully!</div>
+            <div>Your information is submitted successfully!</div>
           </div>
         </div>
-        <div class="fn-error-message w-form-fail">
+        <div id="errorMessage" class="fn-error-message w-form-fail" style="display:none;">
           <div>Oops! Something went wrong while submitting the form.</div>
         </div>
       </div>
@@ -72,7 +76,7 @@
           <a href="about.html" class="efi-footer-link-centre">About</a>
           <a href="browse.html" class="efi-footer-link-centre">Browse</a>
           <a href="login-page.html" class="efi-footer-link-centre">Login</a>
-          <a href="sign-up.html" aria-current="page" class="efi-footer-link-centre w--current">Signup</a>
+          <a href="sign-up.html" class="efi-footer-link-centre w--current">Signup</a>
         </div>
         <div class="efi-ftr-05-footer-block">
           <div class="efi-text-rights-short">Copyright © 2024. LendIt.</div>
@@ -82,5 +86,52 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+
+  <script>
+    document.getElementById('signUpForm').addEventListener('submit', async function(event) {
+      event.preventDefault();
+      
+      // Gather form data
+      const name = document.getElementById('Name').value;
+      const email = document.getElementById('Email').value;
+      const password = document.getElementById('Password').value;
+      const confirmPassword = document.getElementById('ConfirmPassword').value;
+  
+      // Check if passwords match
+      if (password !== confirmPassword) {
+        alert("Passwords do not match!");
+        return;
+      }
+  
+      // Create the user object to send in the request
+      const userData = { name, email, password };
+  
+      try {
+        // Send data to backend API
+        const response = await fetch('/api/user/register', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(userData)
+        });
+  
+        const data = await response.json();
+  
+        if (response.ok) {
+          // Show success message
+          document.getElementById('successMessage').style.display = 'block';
+          document.getElementById('errorMessage').style.display = 'none';
+        } else {
+          // Show error message
+          document.getElementById('errorMessage').style.display = 'block';
+          document.getElementById('successMessage').style.display = 'none';
+        }
+      } catch (error) {
+        // Show error message if fetch fails
+        console.error('Error during registration:', error);
+        document.getElementById('errorMessage').style.display = 'block';
+        document.getElementById('successMessage').style.display = 'none';
+      }
+    });
+  </script>
 </body>
 </html>
