--- a/upload-item.html
+++ b/upload-item.html
@@ -44,16 +44,24 @@
         <p class="fn-paragraph-no-margin">Make sure you label the items!</p>
       </div>
       <div id="w-node-_1696818f-6972-b96d-9115-8d01979d54d5-39ebe521" class="fn-form w-form">
-        <form id="wf-form-Form-Standard" name="wf-form-Form-Standard" data-name="Form Standard" method="get" class="fn-form-standard" data-wf-page-id="6727d81d2dd7467c39ebe521" data-wf-element-id="1696818f-6972-b96d-9115-8d01979d54d6"><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Item-Name" data-name="Item Name" placeholder="Item Name" type="text" id="Item-Name" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Item-Age" data-name="Item Age" placeholder="Item Age in months" type="number" id="Item-Age" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Location" type="text" id="Location" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Description" data-name="Description" placeholder="Description" type="text" id="Description" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Item-Link" data-name="Item Link" placeholder="Original Item Link" type="url" id="Item-Link" required=""><input class="fn-field w-input" autocomplete="off" maxlength="256" name="Price" data-name="Price" placeholder="Price" type="number" id="Price" required=""><select id="Price-Per" name="Price-Per" data-name="Price Per" required="" class="w-select">
-            <option value="">Per Day</option>
-            <option value="Second">Per Hour</option>
-            <option value="Third">Per Month</option>
-          </select>
-          <div class="fn-form-wrapper">
-            <a href="#" class="button w-button">Cancel</a>
-            <a href="sign-up.html" class="button w-button">Submit</a>
-          </div>
-        </form>
+            <div id="w-node-_1696818f-6972-b96d-9115-8d01979d54d5-39ebe521" class="fn-form w-form">
+                <form id="upload-form" name="upload-form" class="fn-form-standard" method="POST">
+                    <input class="fn-field w-input" autocomplete="off" maxlength="256" name="Item-Name" data-name="Item Name" placeholder="Item Name" type="text" id="Item-Name" required>
+                    <input class="fn-field w-input" autocomplete="off" maxlength="256" name="Item-Age" data-name="Item Age" placeholder="Item Age in months" type="number" id="Item-Age" required>
+                    <input class="fn-field w-input" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Location" type="text" id="Location" required>
+                    <input class="fn-field w-input" autocomplete="off" maxlength="256" name="Description" data-name="Description" placeholder="Description" type="text" id="Description" required>
+                    <input class="fn-field w-input" autocomplete="off" maxlength="256" name="Item-Link" data-name="Item Link" placeholder="Original Item Link" type="url" id="Item-Link" required>
+                    <input class="fn-field w-input" autocomplete="off" maxlength="256" name="Price" data-name="Price" placeholder="Price" type="number" id="Price" required>
+                    <select id="Price-Per" name="Price-Per" data-name="Price Per" required class="w-select">
+                      <option value="Per Day">Per Day</option>
+                      <option value="Per Hour">Per Hour</option>
+                      <option value="Per Month">Per Month</option>
+                    </select>
+                    <div class="fn-form-wrapper">
+                      <a href="#" class="button w-button" id="cancel-btn">Cancel</a>
+                      <button type="submit" class="button w-button" id="submit-btn">Submit</button>
+                    </div>
+                  </form>
         <div class="fn-success-message w-form-done">
           <div class="fn-success-message-wrapper">
             <div>Your information is submitted succesfully!</div>
@@ -86,5 +94,62 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+    document.getElementById('upload-form').addEventListener('submit', async function(event) {
+      event.preventDefault();
+      
+      const formData = new FormData(this);
+
+      const data = {
+        name: formData.get('Item-Name'),
+        age: formData.get('Item-Age'),
+        location: formData.get('Location'),
+        description: formData.get('Description'),
+        price: formData.get('Price'),
+        pricePer: formData.get('Price-Per'),
+        //ownerId: getCookie('userId') // This should be dynamically set (maybe from the session or JWT)
+      };
+
+      try {
+        const response = await fetch('/api/items/add', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(data),
+          credentials: 'include'
+        });
+
+        const result = await response.json();
+
+        if (response.ok) {
+          alert('Item added successfully');
+          window.location.href = 'browse.html'; // Redirect to browse page
+        } else {
+          alert('Failed to add item: ' + result.error);
+        }
+      } catch (error) {
+        alert('Error: ' + error.message);
+      }
+    });
+
+    // Cancel button handler
+    document.getElementById('cancel-btn').addEventListener('click', function(event) {
+      event.preventDefault();
+      window.location.href = 'browse.html'; // Or another appropriate redirect
+    });
+    function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) {
+            const cookieValue = decodeURIComponent(parts.pop().split(';').shift());
+            console.log('Cookie retrieved:', cookieValue); // Debug log
+            return cookieValue;
+        }
+        console.log('No cookie found for', name); // Debug log
+        return null;
+}
+
+  </script>
 </body>
 </html>
