--- a/browse.html
+++ b/browse.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 <html data-wf-page="6726c65c4a28a6de28d0da3b" data-wf-site="67256188a1a3be620e19fb0b">
 <head>
   <meta charset="utf-8">
@@ -50,96 +50,13 @@
       </div>
     </div>
   </section>
-  <div class="efi-ft-01">
-    <h2 class="efi-h2">Items Trending Site Wise!</h2>
-    <div class="efi-ft-01-container">
-      <div class="w-layout-grid efi-ft-01-grid">
-        <div id="w-node-_91a971b0-85b2-592e-175e-1a0fd2abc1a7-28d0da3b" class="efi-ft-01-cell">
-          <div class="efi-ft-01-image-wrapper"><img src="images/zfwyrIA6bFw.jpg" loading="lazy" width="6048" height="3400" alt="Lawnmower" srcset="images/zfwyrIA6bFw-p-500.jpg 500w, images/zfwyrIA6bFw.jpg 600w" sizes="(max-width: 767px) 90vw, 608px" class="image-2 unsplash-image"></div>
-          <div class="efi-ft-01-feature-wrapper">
-            <h4 class="efi-h4-2">Lawn Mower</h4>
-            <p class="efi-paragraph">Age: 6 Months<br>Owner: Brandon Miles<br>Location: Alexandria, VA<br>Description: <br>Price: $20 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_91a971b0-85b2-592e-175e-1a0fd2abc1af-28d0da3b" class="efi-ft-01-cell">
-          <div class="efi-ft-01-image-wrapper"><img src="images/5Y8NrzPya-w.jpg" loading="lazy" width="3840" height="5760" alt="silver and black round coins" srcset="images/5Y8NrzPya-w.jpg 500w, images/5Y8NrzPya-w.jpg 600w" sizes="(max-width: 767px) 90vw, 608px" class="image-2 unsplash-image"></div>
-          <div class="efi-ft-01-feature-wrapper">
-            <h4 class="efi-h4-2">Tool Set</h4>
-            <p class="efi-paragraph">Age: 27 Months<br>Owner: Rike Zuck<br>Location: Falls Church, VA<br>Description: <br>Price: $15 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_91a971b0-85b2-592e-175e-1a0fd2abc1b7-28d0da3b" class="efi-ft-01-cell">
-          <div class="efi-ft-01-image-wrapper"><img src="images/4uD9w-pxBTA.jpg" loading="lazy" width="4550" height="3000" alt="In the end, it is just a couch (or a sofa, depending on your viewpoint)" srcset="images/4uD9w-pxBTA-p-500.jpg 500w, images/4uD9w-pxBTA.jpg 600w" sizes="(max-width: 767px) 90vw, 608px" class="image-2 unsplash-image"></div>
-          <div class="efi-ft-01-feature-wrapper">
-            <h4 class="efi-h4-2">Couch</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_91a971b0-85b2-592e-175e-1a0fd2abc1bf-28d0da3b" class="efi-ft-01-cell">
-          <div class="efi-ft-01-image-wrapper"><img class="image-2 unsplash-image unsplash-image" src="images/qTpc0Vj4YoE.jpg" width="6000" height="4000" alt="white and black typewriter on table" style="color:#c0a68c;background-color:#c0a68c" sizes="(max-width: 767px) 90vw, 608px" loading="lazy" srcset="images/qTpc0Vj4YoE.jpg 500w, images/qTpc0Vj4YoE.jpg 600w"></div>
-          <div class="efi-ft-01-feature-wrapper">
-            <h4 class="efi-h4-2">Typewriter</h4>
-            <p class="efi-paragraph">Age: 10 Months<br>Owner: Ram KC<br>Location: Arlington, VA<br>Description: <br>Price: $30 / day</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="efi-ft-06">
-    <h2 class="efi-h2">Uploads we think you might like!</h2>
-    <div class="efi-ft-06-container">
-      <div class="w-layout-grid efi-ft-06-features">
-        <div id="w-node-_695116c8-beb9-5651-82b5-7b903838a7f0-28d0da3b" class="efi-ft-06-cell">
-          <div class="efi-ft-06-image"><img class="image-2 unsplash-image unsplash-image unsplash-image" src="images/DOBIZ_sqgXM.jpg" width="6016" height="4016" alt="piled wine glass set hanging" style="color:#262626;background-color:#262626" sizes="(max-width: 1919px) 90vw, 1440px" loading="lazy" srcset="images/DOBIZ_sqgXM.jpg 500w, images/DOBIZ_sqgXM.jpg 600w"></div>
-          <div class="efi-ft-06-feature-text">
-            <h4 class="efi-h4-2">Wine Glass</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_695116c8-beb9-5651-82b5-7b903838a7f8-28d0da3b" class="efi-ft-06-cell">
-          <div class="efi-ft-06-image"><img src="images/6D1lESi9ssU.jpg" loading="lazy" width="4664" height="3099" alt="Chess pieces child" srcset="images/6D1lESi9ssU.jpg 500w, images/6D1lESi9ssU.jpg 600w" sizes="(max-width: 1919px) 90vw, 1440px" class="image-2 unsplash-image"></div>
-          <div class="efi-ft-06-feature-text">
-            <h4 class="efi-h4-2">Chess Board</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_695116c8-beb9-5651-82b5-7b903838a800-28d0da3b" class="efi-ft-06-cell">
-          <div class="efi-ft-06-image"><img src="images/FsLQpudBetU.jpg" loading="lazy" width="3000" sizes="(max-width: 1919px) 90vw, 1440px" alt="Pillow in the airbnb  flat." srcset="images/FsLQpudBetU.jpg 500w, images/FsLQpudBetU.jpg 600w" class="image-2"></div>
-          <div class="efi-ft-06-feature-text">
-            <h4 class="efi-h4-2">Pillow</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_695116c8-beb9-5651-82b5-7b903838a808-28d0da3b" class="efi-ft-06-cell">
-          <div class="efi-ft-06-image"><img src="images/pdIwPL3HU2s.jpg" loading="lazy" width="3000" sizes="(max-width: 1919px) 90vw, 1440px" alt="brown and white table lamp with light" srcset="images/pdIwPL3HU2s.jpg 500w, images/pdIwPL3HU2s.jpg 600w" class="image-2"></div>
-          <div class="efi-ft-06-feature-text">
-            <h4 class="efi-h4-2">Lamp</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_695116c8-beb9-5651-82b5-7b903838a810-28d0da3b" class="efi-ft-06-cell">
-          <div class="efi-ft-06-image"><img src="images/fXTa2ZH_BF8.jpg" loading="lazy" width="3000" sizes="(max-width: 1919px) 90vw, 1440px" alt="Dumbells for weightlifting " srcset="images/fXTa2ZH_BF8.jpg 500w, images/fXTa2ZH_BF8.jpg 600w" class="image-2"></div>
-          <div class="efi-ft-06-feature-text">
-            <h4 class="efi-h4-2">Weights</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-        <div id="w-node-_695116c8-beb9-5651-82b5-7b903838a818-28d0da3b" class="efi-ft-06-cell">
-          <div class="efi-ft-06-image"><img src="images/4kTbAMRAHtQ.jpg" loading="lazy" width="3000" sizes="(max-width: 1919px) 90vw, 1440px" alt="beige wooden bar stool" srcset="images/4kTbAMRAHtQ.jpg 500w, images/4kTbAMRAHtQ.jpg 600w" class="image-2"></div>
-          <div class="efi-ft-06-feature-text">
-            <h4 class="efi-h4-2">Chair</h4>
-            <p class="efi-paragraph">Age: 13 Months<br>Owner: Bishnu Sharma<br>Location: Alexandria, VA<br>Description: <br>Price: $10 / day</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="efi-ftr-05">
     <div class="efi-ftr-05-container">
       <div class="efi-ftr-05-footer-horizontal">
         <div class="efi-ftr-05-footer-block">
           <div class="text-block">LendIt.</div>
-        </div>
+          <h2>Browse Items</h2>
+      <div id="items-container" class="items-grid"></div>
         <div class="efi-ftr-05-link-wrap">
           <a href="index.html" class="efi-footer-link-centre">Home</a>
           <a href="about.html" class="efi-footer-link-centre">About</a>
@@ -155,5 +72,165 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+    // Load items from the API
+    let allItems = []; // Store all items globally for filtering
+
+    $.getJSON('http://127.0.0.1:5000/api/items', function (items) {
+      allItems = items; // Save the items to the global variable
+      displayItems(items); // Display all items initially
+    }).fail(function () {
+      $('#items-container').html('<p>Failed to load items. Please try again later.</p>');
+    });
+
+    // Function to display items
+    function displayItems(items) {
+      const itemsContainer = $('#items-container');
+      itemsContainer.empty(); // Clear the container
+
+      if (items.length === 0) {
+        itemsContainer.html('<p>No items found</p>');
+      } else {
+        items.forEach(item => {
+          const itemHtml = `
+            <div class="efi-ft-01-cell">
+              <a href="rentalRequest.html?itemId=${item.id}&itemName=${encodeURIComponent(item.name)}&itemDescription=${encodeURIComponent(item.description)}&ownerId=${encodeURIComponent(item.ownerId)}&ownerName=${encodeURIComponent(item.owner)}&itemPrice=${item.price}" class="efi-ft-01-item-link">
+                <div class="efi-ft-01-image-wrapper">
+                  <img src="${item.imageUrl || 'default-image.jpg'}" alt="${item.name}" class="image-2 unsplash-image">
+                </div>
+                <div class="efi-ft-01-feature-wrapper">
+                  <h4 class="efi-h4-2">${item.name}</h4>
+                  <p class="efi-paragraph">
+                    Age: ${item.age}<br>
+                    Owner: ${item.owner || 'Unknown'}<br>
+                    Location: ${item.location}<br>
+                    Description: ${item.description}<br>
+                    Price: $${item.price} ${item.pricePer || ''}
+                  </p>
+                  
+                </div>
+              </a>
+              </div>
+              <div class="review-form">
+                    <label for="rating-${item.id}">Rating (1-5):</label>
+                    <input type="number" id="rating-${item.id}" name="rating" min="1" max="5" required><br>
+
+                    <label for="comment-${item.id}">Comment:</label>
+                    <textarea id="comment-${item.id}" name="comment" required></textarea><br>
+
+                    <button type="button" class="submit-review" data-item-id="${item.id}">Submit Review</button>
+                  </div>
+
+                  <!-- Reviews for this item -->
+                  <div class="reviews-container" id="reviews-${item.id}">
+                    <!-- Reviews will be appended here dynamically -->
+                  </div>
+            </div>
+          `;
+          itemsContainer.append(itemHtml);
+          fetchReviews(item.id);
+        });
+      }
+    }
+
+    // Add search functionality
+    $('#email-form').on('submit', function (e) {
+      e.preventDefault(); // Prevent the form from reloading the page
+      const searchTerm = $('#Item').val().trim().toLowerCase(); // Get the user's search term
+
+      if (searchTerm) {
+        // Filter items based on the search term
+        const filteredItems = allItems.filter(item =>
+          item.name.toLowerCase().includes(searchTerm) ||
+          item.description.toLowerCase().includes(searchTerm) ||
+          item.location.toLowerCase().includes(searchTerm)
+        );
+
+        displayItems(filteredItems); // Update the displayed items
+      } else {
+        displayItems(allItems); // Show all items if the search term is empty
+      }
+    });
+
+    // Handle review submission
+  // Handle review submission using fetch
+  document.addEventListener('click', function (event) {
+    if (event.target && event.target.classList.contains('submit-review')) {
+      const itemId = event.target.getAttribute('data-item-id');
+      const rating = document.getElementById(`rating-${itemId}`).value;
+      const comment = document.getElementById(`comment-${itemId}`).value;
+
+      if (rating && comment) {
+        const reviewData = {
+          item_id: itemId,
+          rating: rating,
+          comment: comment
+        };
+
+        fetch('http://127.0.0.1:5000/api/review/submit', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(reviewData)
+        })
+        .then(response => response.json())
+        .then(data => {
+          if (data.message === 'Review submitted successfully!') {
+            alert('Review submitted successfully!');
+            fetchReviews(itemId); // Refresh the reviews for this item
+          } else {
+            alert('Failed to submit review. Please try again.');
+          }
+        })
+        .catch(error => {
+          console.error('Error submitting review:', error);
+          alert('An error occurred while submitting the review.');
+        });
+      } else {
+        alert('Please provide both rating and comment.');
+      }
+    }
+  });
+
+  // Fetch reviews for a specific item
+  function fetchReviews(itemId) {
+    fetch(`http://127.0.0.1:5000/api/review/${itemId}`)
+      .then(response => response.json())
+      .then(reviews => {
+        const reviewsContainer = document.getElementById(`reviews-${itemId}`);
+        reviewsContainer.innerHTML = ''; // Clear previous reviews
+
+        if (reviews.length === 0) {
+          reviewsContainer.innerHTML = '<p>No reviews yet.</p>';
+        } else {
+          reviews.forEach(review => {
+            const reviewHtml = `
+              <div class="review">
+                <p><strong>Rating:</strong> ${review.rating} / 5</p>
+                <p><strong>Comment:</strong> ${review.comment}</p>
+              </div>
+            `;
+            reviewsContainer.innerHTML += reviewHtml;
+          });
+        }
+      })
+      .catch(error => {
+        console.error('Error fetching reviews:', error);
+        document.getElementById(`reviews-${itemId}`).innerHTML = '<p>Failed to load reviews. Please try again later.</p>';
+      });
+  }
+
+  // Fetch and display reviews for each item on page load
+  document.addEventListener('DOMContentLoaded', function () {
+    const items = document.querySelectorAll('.efi-ft-01-item-link');
+    items.forEach(item => {
+      const itemId = item.getAttribute('data-item-id');
+      fetchReviews(itemId);
+    });
+  });
+  </script>
+</body>
+</html>
 </body>
 </html>
