--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,10 @@
       <div id="items-sold"></div>
     </div>
   </div>
-
+  <!-- New Section -->
+  <h1 class="heading">Rental Requests:</h1>
+  <div id="rental-requests"></div>
+</div>
   <div class="efi-ftr-05">
     <div class="efi-ftr-05-container">
       <div class="efi-ftr-05-footer-horizontal">
@@ -78,7 +81,19 @@
       </div>
     </div>
   </div>
+  <style>
+  /* Styles for Approved Button */
+  button.approved {
+    background-color: green;
+    color: white;
+  }
 
+  /* Styles for Declined Button */
+  button.declined {
+    background-color: red;
+    color: white;
+  }
+</style>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 
@@ -136,7 +151,95 @@
         }
       });
     }
-  
+    async function fetchUserRequests() {
+    try {
+      const response = await fetch('/api/rental', {
+        method: 'GET',
+        credentials: 'include', // Include cookies or tokens
+      });
+
+      if (!response.ok) {
+        throw new Error('Error fetching rental requests: ${response.statusText}');
+      }
+
+      const data = await response.json();
+      const requests = data.requests || []; // Adjust based on API response
+      console.log('Rental Requests:', requests);
+      if (requests.length) {
+        displayRentalRequests(requests);
+      } else {
+        document.getElementById('rental-requests').innerHTML = '<p>No rental requests found.</p>';
+      }
+    } catch (error) {
+      console.error('Error fetching rental requests:', error);
+      document.getElementById('rental-requests').innerHTML = '<p>Error loading rental requests.</p>';
+    }
+  }
+async function handleRequestAction(event, action) {
+  const requestId = event.target.getAttribute('data-id'); // Get the ID from the button
+
+  if (!requestId) {
+    alert('Request ID is missing');
+    return;
+  }
+
+  try {
+    const response = await fetch(`/api/rental-requests/${requestId}`, {
+      method: 'PUT',
+      credentials: 'include',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ status: action }), // Send the new status
+    });
+
+    if (response.ok) {
+      alert(`Request ${action}`);
+      fetchUserRequests(); // Refresh the list
+    } else {
+      alert('Failed to update request status');
+    }
+  } catch (error) {
+    console.error('Error updating rental request:', error);
+    alert('Error updating rental request');
+  }
+}
+  function displayRentalRequests(requests) {
+    const requestContainer = document.getElementById('rental-requests');
+    requestContainer.innerHTML = ''; // Clear previous content
+
+    requests.forEach(request => {
+      const requestElement = document.createElement('div');
+      requestElement.classList.add('efi-ft-01-cell');
+      requestElement.innerHTML = `
+          <div class="efi-ft-01-feature-wrapper">
+            <h4>${request.itemName}</h4>
+            <p>
+              Price: $${request.itemPrice}<br>
+              Rental Duration: ${request.rentalPeriod} days<br>
+              Location: ${request.location}<br>
+              Request Date: ${new Date(request.date).toLocaleDateString()}<br>
+            </p>
+            <button data-id="${request.itemId}" onclick="handleRequestAction(event, 'approved')">Approve</button>
+            <button data-id="${request.itemId}" onclick="handleRequestAction(event, 'denied')">Decline</button>
+          </div>
+        `;
+
+      requestContainer.appendChild(requestElement);
+    });
+
+  }
+document.getElementById('rental-requests').addEventListener('click', (event) => {
+  if (event.target.classList.contains('approve-button')) {
+    handleRequestAction(event, 'approved');
+  } else if (event.target.classList.contains('decline-button')) {
+    handleRequestAction(event, 'declined');
+  }
+});
+
+
+
+
+    fetchUserRequests(); // Initialize on page load
+
     fetchUserProfile();
   </script>
   
