--- a/profile_updates_needed.html
+++ b/profile_updates_needed.html
@@ -81,7 +81,19 @@
       </div>
     </div>
   </div>
+  <style>
+  /* Styles for Approved Button */
+  button.approved {
+    background-color: green;
+    color: white;
+  }
 
+  /* Styles for Declined Button */
+  button.declined {
+    background-color: red;
+    color: white;
+  }
+</style>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 
@@ -141,21 +153,56 @@
     }
     async function fetchUserRequests() {
     try {
-      const response = await fetch('/api/rental', { method: 'GET', credentials: 'include' });
-      const data = await response.json();
+      const response = await fetch('/api/rental', {
+        method: 'GET',
+        credentials: 'include', // Include cookies or tokens
+      });
 
-      if (data.length) {
-        displayRentalRequests(data);
-      }else {
+      if (!response.ok) {
+        throw new Error('Error fetching rental requests: ${response.statusText}');
+      }
+
+      const data = await response.json();
+      const requests = data.requests || []; // Adjust based on API response
+      console.log('Rental Requests:', requests);
+      if (requests.length) {
+        displayRentalRequests(requests);
+      } else {
         document.getElementById('rental-requests').innerHTML = '<p>No rental requests found.</p>';
-    }
+      }
     } catch (error) {
       console.error('Error fetching rental requests:', error);
+      document.getElementById('rental-requests').innerHTML = '<p>Error loading rental requests.</p>';
     }
   }
+async function handleRequestAction(event, action) {
+  const requestId = event.target.getAttribute('data-id'); // Get the ID from the button
 
+  if (!requestId) {
+    alert('Request ID is missing');
+    return;
+  }
+
+  try {
+    const response = await fetch(`/api/rental-requests/${requestId}`, {
+      method: 'PUT',
+      credentials: 'include',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ status: action }), // Send the new status
+    });
+
+    if (response.ok) {
+      alert(`Request ${action}`);
+      fetchUserRequests(); // Refresh the list
+    } else {
+      alert('Failed to update request status');
+    }
+  } catch (error) {
+    console.error('Error updating rental request:', error);
+    alert('Error updating rental request');
+  }
+}
   function displayRentalRequests(requests) {
-    console.log(requests);
     const requestContainer = document.getElementById('rental-requests');
     requestContainer.innerHTML = ''; // Clear previous content
 
@@ -163,53 +210,37 @@
       const requestElement = document.createElement('div');
       requestElement.classList.add('efi-ft-01-cell');
       requestElement.innerHTML = `
-        <div class="efi-ft-01-feature-wrapper">
-          <h4>${request.itemName}</h4>
-          <p>
-            Price: $${request.price}<br>
-            Rental Duration: ${request.duration} days<br>
-            Location: ${request.location}<br>
-            Request Date: ${new Date(request.date).toLocaleDateString()}<br>
-          </p>
-          <button class="approve-button" data-id="${request.id}">Approve</button>
-          <button class="decline-button" data-id="${request.id}">Decline</button>
-        </div>
-      `;
+          <div class="efi-ft-01-feature-wrapper">
+            <h4>${request.itemName}</h4>
+            <p>
+              Price: $${request.itemPrice}<br>
+              Rental Duration: ${request.rentalPeriod} days<br>
+              Location: ${request.location}<br>
+              Request Date: ${new Date(request.date).toLocaleDateString()}<br>
+            </p>
+            <button data-id="${request.itemId}" onclick="handleRequestAction(event, 'approved')">Approve</button>
+            <button data-id="${request.itemId}" onclick="handleRequestAction(event, 'denied')">Decline</button>
+          </div>
+        `;
 
       requestContainer.appendChild(requestElement);
     });
 
-    document.querySelectorAll('.approve-button').forEach(button => {
-      button.addEventListener('click', () => handleRequestAction(button.dataset.id, 'approved'));
-    });
-
-    document.querySelectorAll('.decline-button').forEach(button => {
-      button.addEventListener('click', () => handleRequestAction(button.dataset.id, 'declined'));
-    });
   }
-
-  async function handleRequestAction(requestId, action) {
-    try {
-      const response = await fetch(`/api/rental-requests/${requestId}`, {
-        method: 'PUT',
-        credentials: 'include',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ status: action }),
-      });
-
-      if (response.ok) {
-        alert(`Request ${action}`);
-        fetchUserRequests(); // Refresh the list after update
-      } else {
-        alert('Failed to update request status');
-      }
-    } catch (error) {
-      console.error(`Error updating request status:`, error);
-    }
+document.getElementById('rental-requests').addEventListener('click', (event) => {
+  if (event.target.classList.contains('approve-button')) {
+    handleRequestAction(event, 'approved');
+  } else if (event.target.classList.contains('decline-button')) {
+    handleRequestAction(event, 'declined');
   }
+});
+
+
+
+
+    fetchUserRequests(); // Initialize on page load
 
     fetchUserProfile();
-    fetchUserRequests();
   </script>
   
 </body>
