--- a/profile_updates_needed.html
+++ b/profile_updates_needed.html
@@ -93,6 +93,11 @@
     background-color: red;
     color: white;
   }
+  button {
+      background-color: white;
+      color: black;
+      border: 1px solid #ccc;
+    }
 </style>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67256188a1a3be620e19fb0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
@@ -174,34 +179,34 @@
       console.error('Error fetching rental requests:', error);
       document.getElementById('rental-requests').innerHTML = '<p>Error loading rental requests.</p>';
     }
-  }
-async function handleRequestAction(event, action) {
-  const requestId = event.target.getAttribute('data-id'); // Get the ID from the button
-
-  if (!requestId) {
-    alert('Request ID is missing');
-    return;
-  }
-
-  try {
-    const response = await fetch(`/api/rental-requests/${requestId}`, {
-      method: 'PUT',
-      credentials: 'include',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ status: action }), // Send the new status
-    });
-
-    if (response.ok) {
-      alert(`Request ${action}`);
-      fetchUserRequests(); // Refresh the list
-    } else {
-      alert('Failed to update request status');
-    }
-  } catch (error) {
-    console.error('Error updating rental request:', error);
-    alert('Error updating rental request');
-  }
 }
+// async function handleRequestAction(event, action) {
+//   const requestId = event.target.getAttribute('data-id'); // Get the ID from the button
+
+//   if (!requestId) {
+//     alert('Request ID is missing');
+//     return;
+//   }
+
+//   try {
+//     const response = await fetch(`/api/rental-requests/${requestId}`, {
+//       method: 'PUT',
+//       credentials: 'include',
+//       headers: { 'Content-Type': 'application/json' },
+//       body: JSON.stringify({ status: action }), // Send the new status
+//     });
+
+//     if (response.ok) {
+//       alert(`Request ${action}`);
+//       fetchUserRequests(); // Refresh the list
+//     } else {
+//       alert('Failed to update request status');
+//     }
+//   } catch (error) {
+//     console.error('Error updating rental request:', error);
+//     alert('Error updating rental request');
+//   }
+
   function displayRentalRequests(requests) {
     const requestContainer = document.getElementById('rental-requests');
     requestContainer.innerHTML = ''; // Clear previous content
@@ -218,29 +223,42 @@ async function handleRequestAction(event, action) {
               Location: ${request.location}<br>
               Request Date: ${new Date(request.date).toLocaleDateString()}<br>
             </p>
-            <button data-id="${request.itemId}" onclick="handleRequestAction(event, 'approved')">Approve</button>
-            <button data-id="${request.itemId}" onclick="handleRequestAction(event, 'denied')">Decline</button>
+            <button onclick="approveRequest('${request.id}', this)">Approve</button>
+            <button onclick="declineRequest('${request.id}', this)">Decline</button>
           </div>
         `;
 
       requestContainer.appendChild(requestElement);
     });
 
-  }
-document.getElementById('rental-requests').addEventListener('click', (event) => {
-  if (event.target.classList.contains('approve-button')) {
-    handleRequestAction(event, 'approved');
-  } else if (event.target.classList.contains('decline-button')) {
-    handleRequestAction(event, 'declined');
-  }
-});
+  }function approveRequest(requestId, button) {
+      button.classList.add('approved');
+      button.disabled = true;
+      const buttons = button.parentElement.querySelectorAll('button');
+      buttons.forEach(b => {
+        if (b !== button) {
+          b.disabled = true;
+        }
+      });
+      // Send approval request to backend (you can use requestId here)
+    }
 
+    function declineRequest(requestId, button) {
+      button.classList.add('declined');
+      button.disabled = true;
+      const buttons = button.parentElement.querySelectorAll('button');
+      buttons.forEach(b => {
+        if (b !== button) {
+          b.disabled = true;
+        }
+      });
+      // Send decline request to backend (you can use requestId here)
+    }
 
-
-
-    fetchUserRequests(); // Initialize on page load
-
-    fetchUserProfile();
+    window.onload = function() {
+      fetchUserProfile();
+      fetchUserRequests();
+    }
   </script>
   
 </body>
